2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* README: Bump mono/mcs to r157252.

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* configure.ac (LUNAR_LAUNCHER_CFLAGS): add MONO_CFLAGS, since
	lunar-launcher's build needs to be able to find mono-config.h.

2010-05-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* configure.ac: Show any failure reason for curl.

2010-05-10  Larry Ewing  <lewing@novell.com>

	* cairo/: add cairo_pattern_*_color_tolerance.

	* pixman/: merge to pixman
	2f4f2fb4859931bf6dc5632d8c919e7296736427 then add toskok's
	gradient optimizations controled by
	pixman_image_set_color_tolerance.

2010-05-10  Alan McGovern  <amcgovern@novell.com>

	* autogen.sh: Remove --with-glib=system from our autogen so
	  that we use the default value (eglib). Lets see what blows
	  up now...

2010-05-06  Alan McGovern  <amcgovern@novell.com>

	* README: Bump mono/mcs to gain an eglib fix so that everyone
	  using a manual mono build doesn't end up with a broken
	  plugin.

2010-05-06  Alan McGovern  <amcgovern@novell.com>

	* moon.mds: Update bhe build files.

2010-05-05  Chris Toshok  <toshok@ximian.com>

	* configure.ac: add dbus/network pal stuff.

2010-04-28  Andreia Gaita  <avidigal@novell.com>

	* configure.ac: remove ff36 bridge

2010-04-26  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Fixed LUNAR_LAUNCHER_CFLAGS/LIBS

2010-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* README: Bump to r155983 to get System.Lazy included.

2010-04-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* configure.ac: Add lunar-launcher.

2010-04-14  Larry Ewing  <lewing@novell.com>

	* cairo/configure.ac: add the pixman flags that somehow got lost
	in the update.

	* autogen.sh: don't clear the PKG_CONFIG_PATH it is needed in the
	configure step.

2010-04-14  Larry Ewing  <lewing@novell.com>

	* autogen.sh: confuse the cairo build a little more

	* cairo: us the pixman-1-uninstalled.pc just to make sure we are