@@ -14,13 +14,13 @@ Requirements
 
 	At this time, Moonlight trunk (this release) requires you to use
 	Mono trunk. To build Moonlight, you need to get the mono, mcs and
-	mono-basic modules from trunk at the following revison: 157252
+	mono-basic modules from trunk at the following revison: 157360
 
 	Do this like this:
             svn co http://anonsvn.mono-project.com/source/trunk/moon
-            svn co -r 157252 http://anonsvn.mono-project.com/source/trunk/mono
-            svn co -r 157252 http://anonsvn.mono-project.com/source/trunk/mcs
-            svn co -r 157252 http://anonsvn.mono-project.com/source/trunk/mono-basic
+            svn co -r 157360 http://anonsvn.mono-project.com/source/trunk/mono
+            svn co -r 157360 http://anonsvn.mono-project.com/source/trunk/mcs
+            svn co -r 157360 http://anonsvn.mono-project.com/source/trunk/mono-basic
 
 
 Compiling Mono for Moonlight
@@ -44,7 +44,6 @@ Compiling Mono for Moonlight
 
 		--with-moonlight=only --with-profile4=no --enable-minimal=aot,interpreter
 		--with-ikvm-native=no --with-mcs-docs=no --disable-nls --disable-mono-debugger
-		--with-glib=system
 
 	This Mono configuration will not be suitable for anything except Moonlight.
 
