@@ -130,7 +130,7 @@ namespace System.Net.Browser {
 
 		protected override void CheckProtocolViolation ()
 		{
-			if (Headers.headers.ContainsKey ("Cache-Control"))
+			if (Headers.ContainsKey ("Cache-Control"))
 				throw new SecurityException ();
 
 			bool is_get = (String.Compare (Method, "GET", StringComparison.OrdinalIgnoreCase) == 0);
@@ -138,7 +138,7 @@ namespace System.Net.Browser {
 			// most headers are checked when set, but some are checked much later
 			foreach (string header in bad_get_headers) {
 				// case insensitive check to internal Headers dictionary
-				if (Headers.headers.ContainsKey (header)) {
+				if (Headers.ContainsKey (header)) {
 					if (is_get)
 						throw new ProtocolViolationException ();
 					else
